--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Hello World Fiap</string>
     <string name="welcome">Welcome to Android App Dev</string>
+    <string name="deitel_logo">Deitel\'s bug\'s thumbs up</string>
 </resources>
